Reset provisioning to local testing

--- a/tests/system/provisioning/roles/aws/templates/parameters_template.j2
+++ b/tests/system/provisioning/roles/aws/templates/parameters_template.j2
@@ -23,6 +23,10 @@
     "ParameterValue": "{{ ssh_username }}"
 },
 {
+    "ParameterKey": "SshPassword",
+    "ParameterValue": "{{ ssh_password }}"
+},
+{
     "ParameterKey": "WazuhServerPort",
     "ParameterValue": "{{ wazuh_server_port }}"
 },
